Fixed button sizing on mobile

--- a/src/components/button/style.less
+++ b/src/components/button/style.less
@@ -3,7 +3,8 @@
   text-align: center;
   font-size: 1.5rem;
   padding: 0.5em 1em;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   border-radius: 10px;
   color: white;
   margin: 5px 0px;
@@ -20,4 +21,8 @@
   opacity: 0.85;
   transform: translatey(-1px);
   transition: 200ms;
+}
+
+.text{
+  width: 100%;
 }
