--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -122,3 +122,22 @@
     }
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .home-grid{
+    .buttons{
+      display: flex;
+      justify-content: space-evenly;
+
+      .button{
+        width: 35%;
+        font-size: .5em;
+      }
+    }
+    
+    .home-description {
+      width: 100vw;
+      font-size: 1.7em;
+    }
+  }
+}
